# tabascal

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  env.yaml  env_cpu.yaml  env_gpu.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
docs/: README.md  api.rst  conf.py  index.rst  requirements.txt  requirements.yaml  usage.rst
examples/: calibration_observation.py  target_observation.py
tabascal/: __init__.py  casa_image.py  coordinates.py  image.py  interferometry.py  observation.py  sim.py  telescope.py
tabascal/analysis/yaml_configs/aux_data/: firstpass.rfis  galactic_plane.reg  norad_satellite.rfimodel  satellite.ole  secondpass.rfis  stationary.loc  thirdpass.rfis
tabascal/analysis/yaml_configs/aux_data/tles/: 2024-02-21-galileo.json  2024-02-21-glonass.json  2024-02-21-iridium.json  2024-02-21-navstar.json
tabascal/analysis/yaml_configs/cal/: cal_obs.yaml
tabascal/analysis/yaml_configs/eda2/: ex_spacetrack_login.yaml  extract_eda2.yaml  img_eda2.yaml  norad_ids.yaml  sim_eda2.yaml  tab_eda2.yaml
tabascal/analysis/yaml_configs/huck/: sim_eda2.yaml
tabascal/analysis/yaml_configs/meerkat/: sim_meerkat.yaml
tabascal/analysis/yaml_configs/mwa/: sim_target.yaml
tabascal/analysis/yaml_configs/pow_spec/: end2end  end2end_32  end2end_small  extract_pow_spec.yaml  sim_pow_spec.yaml  sim_pow_spec_32.yaml  sim_pow_spec_64.yaml  sim_pow_spec_small.yaml  tab_pow_spec.yaml
tabascal/dask/: coordinates.py  interferometry.py  observation.py
tabascal/data/: EDA2.itrf.txt  EDA2_.itrf.txt  MWA.itrf.txt  Meerkat.itrf.txt  Small_Array.enu.txt  extract_config_base.yaml  sim_config_base.yaml  tab_config_base.yaml
tabascal/data/config_files/: extract_pow_spec_config_base.yaml  sim_config_base.yaml  tab_config_base.yaml
tabascal/examples/: calibration_observation.py  low_freq_obs.py  mixed_source_observation.py  plot_uv.py  sim.py  sim_vis.py  tabascal_env.yaml  target_observation.py
tabascal/examples/cal_obs/: cal_obs.yaml  calibrator_obs_satellite.rfimodel  calibrator_obs_stationary.rfimodel
tabascal/examples/yaml_obs/: cal_obs.yaml  calibrator.skymodel  satellite.ole  target_obs.yaml  test_obs.yaml
tabascal/jax/: coordinates.py  interferometry.py  observation.py
tabascal/utils/: ast_region.py  check_tles.py  config.py  dask.py  decorators.py  end2end.py  end2end_pow_spec.py  extract.py  flag_data.py  jax.py  jax_extras.py  plot.py  plot_results.py  power_spectrum.py  results_to_MS.py  run_extraction.py  run_tabascal.py  sat_region.py  sim_vis.py  sky.py  tab_tools.py  tle.py  tle_sat_region.py  tools.py  write.py  wsclean_image.py  yaml.py
tests/: test_jax_coordinates.py
