[metadata]
name = tabascal
description = Trajectory based Radio Frequency Interference (RFI) subtraction and calibration using Bayesian methods for radio interferometeric data.
version = 0.0.1
url = https://github.com/chrisfinlay/tabascal
author = Chris Finlay
author_email = christopher.finlay@unige.ch
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    numpy
    jax
    dask
    xarray
    # dask-ms
python_requires = >=3.6
# package_dir = 
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    black
    tox>=3.24

[options.package_data]
tabascal = py.typed

[flake8]
max-line-length = 160